--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,12 @@
         </div>
         <div class="row">
             <div class="col-12">
+                <div id="googleDisplay">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
                 <div id="books">
                 </div>
             </div>
