added home button on account page

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="container-fluid main">
         <div class="container-fluid bg-1 text-center">
-            <img class="banner" src="assets/images/bookends_logo.png" alt="Bookends">
+            <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
             <h3>A Better Way To Read</h3>
         </div>
         <div class="container-fluid bg-2 text-center">
