--- a/public/account.html
+++ b/public/account.html
@@ -35,6 +35,9 @@
                         <li>
                             <p id="userEmail"></p>
                         </li>
+                        <li>
+                            <a href="index.html"><i class="fa fa-home"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +45,7 @@
     </div>
         <div class="container main">
         <div class="container-fluid bg-1 text-center">
-            <img src="assets/images/bookends_logo.png" alt="Bookends">
+            <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
             <h3>A Better Way To Read</h3>
         </div>
         <div class="container-fluid bg-2 text-center">
