--- a/public/account.html
+++ b/public/account.html
@@ -46,7 +46,7 @@
         <div class="container main">
         <div class="container-fluid bg-1 text-center">
             <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
-            <h3>A Better Way To Read</h3>
+            <h3 class="mt-3">A Better Way To Read</h3>
         </div>
         <div class="container-fluid bg-2 text-center">
             <h4>Reviews and Listings of your Favorite Titles</h4>
