--- a/public/index.html
+++ b/public/index.html
@@ -43,23 +43,22 @@
     <div class="container-fluid main">
         <div class="container-fluid bg-1 text-center">
             <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
-            <h3>A Better Way To Read</h3>
+            <h3 class="mt-3">Book Discovery and Beyond</h3>
         </div>
-        <div class="container-fluid bg-2 text-center">
-            <h4>Reviews and Listings of your Favorite Titles</h4>
-        </div>
-        <div class="text-center">
+        <hr class="w-100 bg-2 text-center py-3" />
+        <div class="text-center mt-3">
             <form id="search-form">
                 <input type="text" id="book-input" placeholder="choose a book" required />
                 <input id="book-search" type="submit" value="Search" />
             </form>
         </div>
-        <div class="row mt-3 results-area">
-            <div class="col-12 col-md-6">
+        <hr class="w-100 bg-2 text-center py-3" />
+        <div class="row mt-3 mx-auto results-area">
+            <div class="col-12 col-lg-4">
                 <div id="googleDisplay">
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-lg-8">
                 <div id="books">
                 </div>
             </div>
