adjusted responsive design, fixed google images

--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
         </div>
   
         <div class="row mt-3 mx-auto results-area">
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 px-0">
                 <div id="googleDisplay">
                 </div>
             </div>
-            <div class="col-12 col-lg-8">
+            <div class="col-12 col-lg-8 px-0">
                 <div id="books">
                 </div>
             </div>
