--- a/public/account.html
+++ b/public/account.html
@@ -43,13 +43,10 @@
             </div>
         </div>
     </div>
-        <div class="container main">
+    <div class="container-fluid main">
         <div class="container-fluid bg-1 text-center">
             <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
-            <h3 class="mt-3">A Better Way To Read</h3>
-        </div>
-        <div class="container-fluid bg-2 text-center">
-            <h4>Reviews and Listings of your Favorite Titles</h4>
+            <h3 class="mt-3">Book Discovery and Beyond</h3>
         </div>
         <div class="row">
             <div class="col-12">
@@ -58,7 +55,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/setup.js"></script>
     <script type="text/javascript" src="assets/javascript/search-app.js"></script>
