--- a/public/account.html
+++ b/public/account.html
@@ -46,8 +46,8 @@
         </div>
         <div class="container-fluid header">
             <div class="container-fluid bg-1 text-center">
-                <img class="banner img-fluid" src="assets/images/bookends_logo.png" alt="Bookends">
-                <h3 class="mt-3">Book Discovery and Beyond</h3>
+                <img class="banner img-fluid" src="assets/images/bookendslogo.png" alt="Bookends">
+                <h3 class="mt-3">Book Discovery End to End</h3>
             </div>
         </div>
         <main>
