added files back in

--- a/public/account.html
+++ b/public/account.html
@@ -36,6 +36,9 @@
                             <li>
                                 <p id="userEmail"></p>
                             </li>
+                            <li>
+                                <a href="index.html"><i class="fa fa-home"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -49,19 +52,9 @@
         </div>
         <main>
             <div class="container-fluid middle">
-                <div class="text-center mt-3">
-                    <form id="search-form">
-                        <input type="text" id="book-input" placeholder="choose a book" required />
-                        <input id="book-search" type="submit" value="Search" />
-                    </form>
-                </div>
-                <div class="row mt-3 mx-auto results-area">
-                    <div class="col-12 col-lg-4 px-0">
-                        <div id="googleDisplay">
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-8 px-0">
-                        <div id="books">
+                <div class="row">
+                    <div class="col-12">
+                        <div id="priorSearches">
                         </div>
                     </div>
                 </div>
@@ -76,5 +69,5 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/setup.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="assets/javascript/search-app.js"></script>
 </body>
