--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
                     <div id="account-info">
                         <ul>
                             <li>
-                                <button id="signIn" button type="button" class="btn btn-primary btn-sm">Sign In</button>
+                                <button id="signIn">Sign In</button>
                             </li>
                             <li>
-                                <button type="button" class="btn btn-primary btn-sm">Sign Out</button>
+                                <button id="signOut">Sign Out</button>
                             </li>
                             <li>
                                 <a href="account.html">
