--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
                     <div id="account-info">
                         <ul>
                             <li>
-                                <button id="signIn">Sign In</button>
+                                <button id="signIn" class='btn btn-sm btn-primary'>Sign In</button>
                             </li>
                             <li>
-                                <button id="signOut">Sign Out</button>
+                                <button id="signOut" class='btn btn-sm btn-primary'>Sign Out</button>
                             </li>
                             <li>
                                 <a href="account.html">
