--- a/public/account.html
+++ b/public/account.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bookends</title>
+    <title>Bookends | Your Account</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -20,27 +20,36 @@
         <div class="container-fluid">
             <div class="row account-info-row">
                 <div class="col-12">
-                    <div id="account-info">
-                        <ul>
-                            <li>
-                                <button id="signIn" class='btn btn-sm btn-primary'>Sign In</button>
-                            </li>
-                            <li>
-                                <button id="signOut" class='btn btn-sm btn-primary'>Sign Out</button>
-                            </li>
-                            <li>
-                                <a href="account.html">
-                                    <p id="userName"></p>
-                                </a>
-                            </li>
-                            <li>
-                                <p id="userEmail"></p>
-                            </li>
-                            <li>
-                                <a href="index.html"><i class="fa fa-home"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+                    <nav class="navbar navbar-expand-md navbar-light">
+                        <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <div id="account-info">
+                                    <ul>
+                                        <li>
+                                            <button id="signIn" class='btn btn-sm btn-primary'>Sign In</button>
+                                        </li>
+                                        <li>
+                                            <button id="signOut" class='btn btn-sm btn-primary'>Sign Out</button>
+                                        </li>
+                                        <li>
+                                            <a href="account.html">
+                                                <p id="userName"></p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <p id="userEmail"></p>
+                                        </li>
+                                        <li>
+                                            <a href="index.html"><i class="fa fa-home"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
@@ -68,6 +77,8 @@
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/javascript/setup.js"></script>
     <script type="text/javascript" src="assets/javascript/search-app.js"></script>
 </body>
