--- a/public/index.html
+++ b/public/index.html
@@ -20,24 +20,33 @@
         <div class="container-fluid">
             <div class="row account-info-row">
                 <div class="col-12">
-                    <div id="account-info">
-                        <ul>
-                            <li>
-                                <button id="signIn" class='btn btn-sm btn-primary'>Sign In</button>
-                            </li>
-                            <li>
-                                <button id="signOut" class='btn btn-sm btn-primary'>Sign Out</button>
-                            </li>
-                            <li>
-                                <a href="account.html">
-                                    <p id="userName"></p>
-                                </a>
-                            </li>
-                            <li>
-                                <p id="userEmail"></p>
-                            </li>
-                        </ul>
-                    </div>
+                    <nav class="navbar navbar-expand-md navbar-light">
+                        <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <div id="account-info">
+                                    <ul>
+                                        <li>
+                                            <button id="signIn" class='btn btn-sm btn-primary'>Sign In</button>
+                                        </li>
+                                        <li>
+                                            <button id="signOut" class='btn btn-sm btn-primary'>Sign Out</button>
+                                        </li>
+                                        <li>
+                                            <a href="account.html">
+                                                <p id="userName"></p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <p id="userEmail"></p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
@@ -52,7 +61,7 @@
                 <div class="text-center mt-3">
                     <form id="search-form">
                         <input type="text" id="book-input" placeholder="choose a book" required />
-                        <input id="book-search" type="submit" value="Search" />
+                        <input id="book-search" type="submit" value="Search" class='btn btn-sm btn-custom ml-1' />
                     </form>
                 </div>
                 <div class="row mt-3 mx-auto results-area">
@@ -75,6 +84,8 @@
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/javascript/setup.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
