added about section on main page

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,11 @@
         <div class="container-fluid header">
             <div class="container-fluid bg-1 text-center">
                 <img class="banner img-fluid" src="assets/images/bookendslogo.png" alt="Bookends">
-                <h3 class="mt-3">Book Discovery End to End</h3>
+                <h3 class="mt-3 tagline mx-auto">Book discovery end to end</h3>
+                <h5 class="text-white text-center" id="about-click" data-text-swap="-" data-text-original="+">+</h5>
+                <div id="about" class="my-2">
+                <p class="text-center">Search for any book</p><p class="text-center">Explore and discover on Google Books</p><p class="text-center">Find rare editions on eBay</p><p class="text-center">Sign in to access saved searches</p>
+                </div>
             </div>
         </div>
         <main>
