--- a/public/account.html
+++ b/public/account.html
@@ -57,13 +57,14 @@
         <div class="container-fluid header">
             <div class="container-fluid bg-1 text-center">
                 <img class="banner img-fluid" src="assets/images/bookendslogo.png" alt="Bookends">
-                <h3 class="mt-3">Book Discovery End to End</h3>
+                <h3 class="mt-3 tagline mx-auto">Book discovery end to end</h3>
             </div>
         </div>
         <main>
             <div class="container-fluid middle">
                 <div class="row">
                     <div class="col-12">
+                        <h5 class="text-white text-center">Search History</h5>
                         <div id="sortable">
                     
                         </div>
