cleaned up code and commented js

--- a/public/account.html
+++ b/public/account.html
@@ -4,7 +4,10 @@
 <head>
     <title>Bookends | Your Account</title>
     <meta charset="utf-8">
+    <meta name="description" content="Bookends: Search History">
+    <meta name="keywords" content="Bookends, book search, book discovery, Google Books, eBay">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#1883A5" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -66,7 +69,6 @@
                     <div class="col-12">
                         <h5 class="text-white text-center">Search History</h5>
                         <div id="sortable">
-                    
                         </div>
                     </div>
                 </div>
