--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
     <title>Bookends</title>
     <meta charset="utf-8">
+    <meta name="description" content="Bookends: A Book Discovery Tool">
+    <meta name="keywords" content="Bookends, book search, book discovery, Google Books, eBay">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#1883A5" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
@@ -56,7 +59,10 @@
                 <h3 class="mt-3 tagline mx-auto">Book discovery end to end</h3>
                 <h5 class="text-white text-center" id="about-click" data-text-swap="-" data-text-original="+">+</h5>
                 <div id="about" class="my-2">
-                <p class="text-center">Search for any book</p><p class="text-center">Explore and discover on Google Books</p><p class="text-center">Find rare editions on eBay</p><p class="text-center">Sign in to access saved searches</p>
+                    <p class="text-center">Search for any book</p>
+                    <p class="text-center">Explore and discover on Google Books</p>
+                    <p class="text-center">Find rare editions on eBay</p>
+                    <p class="text-center">Sign in to access saved searches</p>
                 </div>
             </div>
         </div>
